--- a/template/package.json
+++ b/template/package.json
@@ -44,7 +44,9 @@
     "@rollup/plugin-node-resolve": "^10.0.0",
     "prettier": "^2.1.2",
     "rollup": "^2.33.0",
+    "react-is": "^16.13.1",
     "rollup-plugin-svelte": "^6.1.0",
+    "svelte-loader": "^2.13.6",
     "svelte-preprocess": "^4.5.2",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5"
