--- a/template/package.json
+++ b/template/package.json
@@ -4,13 +4,15 @@
   "version": "0.0.0",
   "license": "MIT",
   "author": "<%= author %>",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "svelte": "<%= name %>.svelte",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "svelte": "./src/index.js",
+  "types": "./types/index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "develop": "rollup -cw & start-storybook -p 3002",
     "build-storybook": "build-storybook",
+    "typegen": "sveld",
     "deploy:docs": "storybook-to-ghpages --out .cache",
     "clean": "rm -rf ./dist",
     "prepublishOnly": "npm run build && npm run deploy:docs"
@@ -33,7 +35,7 @@
   "homepage": "https://<%= githubOrg %>.github.io/<%= packageName %>/",
   "dependencies": {},
   "peerDependencies": {
-    "svelte": "^3.0.0"
+    "svelte": "^3.3.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.0.28",
@@ -46,8 +48,8 @@
     "rollup": "^2.33.0",
     "react-is": "^16.13.1",
     "rollup-plugin-svelte": "^6.1.0",
+    "sveld": "^0.5.0",
     "svelte-loader": "^2.13.6",
-    "svelte-preprocess": "^4.5.2",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5"
   }
