--- a/template/package.json
+++ b/template/package.json
@@ -12,10 +12,9 @@
     "build": "rollup -c",
     "develop": "rollup -cw & start-storybook -p 3002",
     "build-storybook": "build-storybook",
-    "typegen": "sveld",
     "deploy:docs": "storybook-to-ghpages --out .cache",
     "clean": "rm -rf ./dist",
-    "prepublishOnly": "npm run build && npm run deploy:docs"
+    "prepublishOnly": "yarn build && yarn deploy:docs"
   },
   "keywords": [
     "svelte"
@@ -38,19 +37,11 @@
     "svelte": "^3.3.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.0.28",
-    "@storybook/addon-essentials": "^6.0.28",
-    "@storybook/addon-links": "^6.0.28",
-    "@storybook/svelte": "^6.0.28",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "prettier": "^2.1.2",
     "rollup": "^2.33.0",
-    "react-is": "^16.13.1",
     "rollup-plugin-svelte": "^6.1.0",
-    "sveld": "^0.5.0",
-    "svelte-loader": "^2.13.6",
-    "tslib": "^2.0.3",
-    "typescript": "^4.0.5"
+    "svelte": "^3.3.0"
   }
 }
