--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "esnext",
     "moduleResolution": "node",
-    "target": "es2017",
+    "target": "esnext",
     "importsNotUsedAsValues": "error",
     "sourceMap": true,
     "esModuleInterop": true,
@@ -10,5 +10,5 @@
     "lib": ["esnext", "dom"],
     "types": ["svelte"]
   },
-  "include": ["**/*"]
+  "include": ["src", "@types"]
 }
